--- a/Assignment_1/login_page.html
+++ b/Assignment_1/login_page.html
@@ -15,7 +15,7 @@
        <br>
     </header>
     <div id="Login_portal">
-        <form action="./task2.html">
+        <form action="./home.html">
             <center>
                 <br> <br>
                 <label>Username</label>
